# robotic_control

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
depends/: CMakeLists.txt
depends/CoreSDK/: CMakeLists.txt
depends/CoreSDK/include/: data_types.h  robot.h  utility.h
depends/krnx/: CMakeLists.txt
depends/krnx/include/: krnx.h
depends/krnx/lib/: krnx.lib
depends/xCoreSDK/: CHANGELOG.md  CMakeLists.txt  README.md
depends/xCoreSDK/example/: CMakeLists.txt  force_control_commands.cpp  get_keypad_state.cpp  modbusRTU_endtool_control.cpp  move_example.cpp  path_record.cpp  print_helper.hpp  read_robot_state.cpp  rl_project.cpp  sdk_example.cpp  xmatemodel_er3_er7p.cpp
depends/xCoreSDK/example/rt/: cartesian_impedance_control.cpp  cartesian_s_line.cpp  follow_joint_position.cpp  joint_impedance_control.cpp  joint_position_control.cpp  joint_s_line.cpp  move_commands.cpp  rt_industrial.cpp  torque_control.cpp
depends/xCoreSDK/include/rokae/: model.h  utility.h
depends/xCoreSDK/lib/: CMakeLists.txt
depends/xCoreSDK/lib/Linux/aarch64/: libxCoreSDK.so.0.5.0
depends/xCoreSDK/lib/Linux/x86_64/: libxCoreSDK.so.0.5.0
depends/xCoreSDK/lib/Windows/Debug/32bit/: xCoreSDK_static.lib
depends/xCoreSDK/lib/Windows/Debug/64bit/: xCoreSDK.lib  xCoreSDK_static.lib
depends/xCoreSDK/lib/Windows/Release/32bit/: xCoreSDK_static.lib
depends/xCoreSDK/lib/Windows/Release/64bit/: xCoreSDK.lib  xCoreSDK_static.lib
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  robotapp.cpp  robotapp.h
src/dev/: CMakeLists.txt  robotcontroller.cpp  robotcontroller.h  robotinterface.h  robotkrnxdev.cpp  robotkrnxdev.h  robotstudio.cpp  robotstudio.h  robotxcoredev.cpp  robotxcoredev.h
src/log/: CMakeLists.txt  logging.cpp  logging.h
src/utils/: CMakeLists.txt  blockingqueue.h
